--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ a{
 
 .page-header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -92,6 +93,7 @@ a{
     align-items: center;
     gap: 40px;
  }
+
  .nav-link {
     padding: 24px 0;
     display: block;
@@ -100,12 +102,29 @@ a{
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+
+ .nav-link.current {
+    position: relative;
+ }
+
+ .nav-link.current::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    border-radius: 2px;
+    background-color: #404bbf;
+    width: 100%;
+    height: 4px;
  }
 
  .nav-link:hover,
  .nav-link:focus,
  .contacts-link:hover,
- .contacts-link:focus {
+ .contacts-link:focus,
+ .nav-link.current {
     color: #404bbf;
 }
 
@@ -121,6 +140,7 @@ a{
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-section{
