--- a/css/styles.css
+++ b/css/styles.css
@@ -144,10 +144,16 @@ a{
 }
 
 .main-section{
+    width: 1440px;
+    margin: 0 auto;
     display: block;
     background-color: #2e2f42;
     padding-top: 188px;
     padding-bottom: 188px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)) url(../images/icons/people-office.jpg);
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    background-size: cover;
 }
 .page-title {
     max-width: 496px;
