--- a/css/styles.css
+++ b/css/styles.css
@@ -210,12 +210,15 @@ a{
 }
 
 .icon-strategy {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border: 1px solid #8e8f99;
     border-radius: 4px;
-    width: 100%;
+    width: 264px;
     height: 112px;
     background: #f4f4fd;
-    margin: 0;
+    margin-bottom: 8px;
 }
 
 .icon-list {
