--- a/css/styles.css
+++ b/css/styles.css
@@ -145,12 +145,13 @@ a{
 
 .main-section{
     width: 1440px;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
     display: block;
     background-color: #2e2f42;
     padding-top: 188px;
     padding-bottom: 188px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)) url(../images/icons/people-office.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)) url(../images/bg-image.jpg);
     background-repeat: no-repeat;
     background-position: 0 0;
     background-size: cover;
@@ -184,11 +185,13 @@ a{
     text-align: center;
     margin: auto;
     gap: 10px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
-}
 .button:hover,
 .button:focus {
     background: #404bbf;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 
 .strategy-section {
@@ -218,13 +221,14 @@ a{
     width: 264px;
     height: 112px;
     background: #f4f4fd;
+    margin-bottom: 8px;
 }
 
 .icon-list {
-    padding-top: 24px;
-    padding-right: 100px;
-    padding-bottom: 24px;
-    padding-left: 100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 .strategy-card-title {
     font-weight: 500;
@@ -298,7 +302,6 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
 }
 
 .social-container {
-    width: 232px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 16px;
@@ -311,7 +314,7 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
     gap: 24px;
 }
 
-.social-list-item {
+.social-list-link {
     display: flex;
     justify-content: center;
     align-items: center;
