--- a/css/styles.css
+++ b/css/styles.css
@@ -412,6 +412,11 @@ font-weight: 500;
     color: #f4f4fd;
 }
 
+.social-container-footer {
+   display: flex;
+   align-items: baseline;
+}
+
 .footer-text-social-list {
     font-weight: 500;
     font-size: 16px;
