--- a/css/styles.css
+++ b/css/styles.css
@@ -397,6 +397,15 @@ font-weight: 500;
     padding-bottom: 100px;
 }
 
+.page-footer-container {
+   display: flex;
+    align-items: baseline;
+}
+
+.container-footer-logo {
+    margin-right: 120px;
+}
+
 .footer-logo {
     display: inline-block;
     margin: 16px;
@@ -410,11 +419,6 @@ font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
-}
-
-.social-container-footer {
-   display: flex;
-   align-items: baseline;
 }
 
 .footer-text-social-list {
