--- a/css/styles.css
+++ b/css/styles.css
@@ -364,6 +364,34 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
 
 .portfolio-item {
 width: calc((100% - 48px)/3);
+position: relative;
+overflow: hidden;
+}
+
+.portfolio-item:hover .overlay-text {
+    transform: translateY(0);
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.overlay-text {
+    padding-top: 40px;
+    padding-left: 32px;
+    padding-right: 32px;
+    padding-bottom: 164px;
+    background-color: #4d5ae5;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .card-portfolio {
@@ -427,5 +455,6 @@ font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #fff;
+    margin-top: 0;
     margin-bottom: 16px;
 }
