--- a/css/styles.css
+++ b/css/styles.css
@@ -143,17 +143,17 @@ a{
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.main-section{
-    width: 1440px;
+.main-section {
+    max-width-width: 1440px;
     margin-left: auto;
     margin-right: auto;
     display: block;
     background-color: #2e2f42;
     padding-top: 188px;
     padding-bottom: 188px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)) url(../images/bg-image.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)) url(../images/bg-image.jpg);
     background-repeat: no-repeat;
-    background-position: 0 0;
+    background-position: center;
     background-size: cover;
 }
 .page-title {
@@ -315,20 +315,26 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
     gap: 24px;
 }
 
-.social-list-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.social-list-item {
     width: 40px;
     height: 40px;
+}
+
+.social-list-link {
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
     background-color: #4d5ae5;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list-link:hover {
+.social-list-link:hover,
+.social-list-link:focus {
     background-color: #31d0aa;
-    transform: background-color;
 }
 
 .social-list-icons {
@@ -364,11 +370,14 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
 
 .portfolio-item {
 width: calc((100% - 48px)/3);
-position: relative;
-overflow: hidden;
 }
 
-.portfolio-item:hover .overlay-text {
+.section-image {
+   position: relative;
+   overflow: hidden;
+}
+
+.section-image:hover .overlay-text{
     transform: translateY(0);
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
@@ -457,4 +466,21 @@ font-weight: 500;
     color: #fff;
     margin-top: 0;
     margin-bottom: 16px;
+}
+
+.social-list-link-footer {
+    display: flex;
+    gap: 16px;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #4d5ae5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-list-link-footer:hover {
+    background-color: #31d0aa;
+    transform: background-color;
 }
