--- a/css/styles.css
+++ b/css/styles.css
@@ -144,17 +144,21 @@ a{
 }
 
 .main-section {
-    max-width-width: 1440px;
+    max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
     display: block;
     background-color: #2e2f42;
     padding-top: 188px;
     padding-bottom: 188px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)) url(../images/bg-image.jpg);
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
+        url(../images/bg-image.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+
 }
 .page-title {
     max-width: 496px;
@@ -315,22 +319,18 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
     gap: 24px;
 }
 
-.social-list-item {
-    width: 40px;
-    height: 40px;
-}
-
-.social-list-link {
+.social-list .social-list-link {
     display: flex;
-    gap: 24px;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     background-color: #4d5ae5;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 
 .social-list-link:hover,
 .social-list-link:focus {
@@ -383,10 +383,7 @@ width: calc((100% - 48px)/3);
 }
 
 .overlay-text {
-    padding-top: 40px;
-    padding-left: 32px;
-    padding-right: 32px;
-    padding-bottom: 164px;
+    padding: 40px 32px;
     background-color: #4d5ae5;
     font-weight: 400;
     font-size: 16px;
