--- a/css/styles.css
+++ b/css/styles.css
@@ -347,9 +347,6 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
     width: 100%;
 }
 
-.portfolio-container {
-   
-}
 .portfolio-section-title {
     font-weight: 700;
     font-size: 36px;
@@ -369,12 +366,17 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
 }
 
 .portfolio-item {
+position: relative;
+overflow: hidden;
 width: calc((100% - 48px)/3);
 }
 
 .section-image {
-   position: relative;
-   overflow: hidden;
+position: absolute;
+top: 0;
+left: 0;
+transform: translateY(100%);
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-image:hover .overlay-text{
@@ -390,14 +392,8 @@ width: calc((100% - 48px)/3);
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
-    transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .card-portfolio {
@@ -465,7 +461,7 @@ font-weight: 500;
     margin-bottom: 16px;
 }
 
-.social-list-link-footer {
+.social-list-footer .social-list-link-footer {
     display: flex;
     gap: 16px;
     justify-content: center;
@@ -475,9 +471,10 @@ font-weight: 500;
     border-radius: 50%;
     background-color: #4d5ae5;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    }
 
-.social-list-link-footer:hover {
+.social-list-footer .social-list-link-footer:hover,
+.social-list-footer .social-list-link-footer:focus{
     background-color: #31d0aa;
     transform: background-color;
 }
