--- a/css/styles.css
+++ b/css/styles.css
@@ -371,7 +371,6 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
 }
 
 .portfolio-item {
-
 width: calc((100% - 48px)/3);
 }
 
@@ -465,6 +464,12 @@ font-weight: 500;
     color: #fff;
     margin-top: 0;
     margin-bottom: 16px;
+}
+
+.social-list-footer {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
 }
 
     .social-list-item-footer {
