--- a/css/styles.css
+++ b/css/styles.css
@@ -309,13 +309,10 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
 .social-container {
     margin-left: auto;
     margin-right: auto;
-    padding-left: 16px;
-    padding-right: 16px;
 }
 
 .social-list {
-    display: flex;
-   
+    margin-top: 8px;
 }
 
 .social-list-item {
@@ -325,7 +322,6 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
 
 .social-list-link {
     display: flex;
-    justify-content: center;
     gap: 24px;
     fill: none;
     stroke: #f4f4fd;
@@ -340,10 +336,8 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
 
 .social-list-link:hover,
 .social-list-link:focus {
-    background-color: #404bbf;
-    transform: background-color;
-}
-
+    background-color: #404DDF;
+}    
 
 .social-list-icons {
     fill: #f4f4fd;
@@ -398,10 +392,14 @@ overflow: hidden;
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
         margin: 0;
-}    
+}  
 
-.portfolio-item:hover .overlay-text{
+.portfolio-item:hover .overlay-text {
     transform: translateY(0%);
+}
+
+.portfolio-item:hover,
+.portfolio-item:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
