--- a/css/styles.css
+++ b/css/styles.css
@@ -306,13 +306,10 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
     margin-bottom: 8px;
 }
 
-.social-container {
-    margin-left: auto;
-    margin-right: auto;
-}
-
 .social-list {
     margin-top: 8px;
+    gap: 24px;
+    justify-content: center;
 }
 
 .social-list-item {
