--- a/css/styles.css
+++ b/css/styles.css
@@ -307,6 +307,7 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
 }
 
 .social-list {
+    display: flex;
     margin-top: 8px;
     gap: 24px;
     justify-content: center;
@@ -333,7 +334,7 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
 
 .social-list-link:hover,
 .social-list-link:focus {
-    background-color: #404DDF;
+    background-color: #404bbf;
 }    
 
 .social-list-icons {
