--- a/css/styles.css
+++ b/css/styles.css
@@ -387,8 +387,7 @@ overflow: hidden;
         width: 100%;
         height: 100%;
         transform: translateY(100%);
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
         margin: 0;
 }  
 
